# c-side

./: .gitignore  CMakeLists.txt  README.md  deps  hello-world-cxx.cpp  makefile  ocr-memtest-c.c  ocr-memtest-cxx.cpp
mk/: project.mk  runners.mk  targets.mk
